--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Pages</ion-title>
+      <ion-title>Movie App</ion-title>
     </ion-toolbar>
   </ion-header>
 
