--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #2F2FA2,
+  secondary:  #553D67,
+  danger:     #F64C72,
+  light:      #99738E,
+  dark:       #242582
 );
 
 
