--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,7 @@
       <button color="dark" ion-item *ngFor="let page of pages" (click)="openPage(page)">
         {{ page.title }}
       </button>
+      <button color="dark" ion-item (click)="logOut()">Log out</button>
     </ion-list>
   </ion-content>
 </ion-menu>
